# ip-neuro

./: README.md  environment_legacy.yml  pyproject.toml
notebooks/: XAI_end_to_end.ipynb  aligned_databank.ipynb  batched_training.ipynb  binary_quan.ipynb  bioinformatic.ipynb  databank.ipynb  decon.ipynb  detected_signals.csv  endtoend.ipynb  endtoend_half.ipynb  features.ipynb  feedback_binary.ipynb  machine_learning.ipynb  ms1ms2.ipynb  quan.ipynb  reader.ipynb  retention_alin.ipynb  search_engine.ipynb  synthetic_dataset.ipynb  test.ipynb  tic.ipynb  tic_training.ipynb  vis_decon.ipynb  vis_pfr.ipynb  vis_xic.ipynb  visualization.ipynb  volcano.ipynb  xai.ipynb  xai_decon.ipynb  xai_replicates.ipynb
notebooks/group_compare_all_bins_8_groups_test/bin_35/compare_AB/: summary__pos_1__neg_0.json
notebooks/group_compare_all_bins_8_groups_test/bin_35/run_A/: summary__pos_1__neg_0.json
notebooks/group_compare_all_bins_8_groups_test/bin_35/run_B/: summary__pos_1__neg_0.json
notebooks/group_compare_only/bin_15/compare_AB/: split_manifest.json  summary__pos_1__neg_0.json  summary__pos_2_3__neg_0_1.json  summary__pos_2__neg_0.json  summary__pos_3__neg_0.json
notebooks/group_compare_only/bin_5/compare_AB/: split_manifest.json  (+4 more)
notebooks/synthetic_keras_volcano/: feature_results.csv
notebooks/synthetic_keras_volcano_analysis/: feature_results.csv
notebooks/synthetic_keras_volcano_full/: feature_results.csv
notebooks/synthetic_keras_volcano_weighted/: feature_results.csv  feature_results_with_anova.csv
notebooks/synthetic_snr_volcano/: snr_volcano_comparison.csv
(+45 files in other folders)
