[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "explainable-ai"
version = "0.1.0"
description = "Explainable AI utilities"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Benjamin Nouri Nigjeh", email = "you@example.com" }
]

dependencies = [
  "openai>=1.0.0",
  "langchain>=0.2.0,<0.3",
  "streamlit>=1.30.0",
  "python-dotenv>=1.0.0",
  "pypdf2>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.8", "build>=1.0", "twine>=5.0"]
ms-legacy = ["fisher-py ; python_version < '3.10'"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
